@@ -2,27 +2,35 @@ package org.endeavourhealth.imapi.logic.service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
-
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import org.elasticsearch.common.unit.Fuzziness;
 import org.elasticsearch.index.query.*;
+import org.elasticsearch.index.query.Operator;
+import org.elasticsearch.index.query.functionscore.ScriptScoreQueryBuilder;
+import org.elasticsearch.script.Script;
+import org.elasticsearch.script.ScriptType;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.sort.SortOrder;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentFactory;
+import org.elasticsearch.xcontent.json.JsonXContent;
 import org.endeavourhealth.imapi.logic.CachedObjectMapper;
 import org.endeavourhealth.imapi.logic.cache.EntityCache;
+import org.endeavourhealth.imapi.model.Pageable;
 import org.endeavourhealth.imapi.model.customexceptions.OpenSearchException;
 import org.endeavourhealth.imapi.model.imq.*;
-import org.endeavourhealth.imapi.model.search.SearchRequest;
-import org.endeavourhealth.imapi.model.search.SearchResultSummary;
-import org.endeavourhealth.imapi.model.search.SearchTermCode;
-import org.endeavourhealth.imapi.model.tripletree.TTAlias;
+import org.endeavourhealth.imapi.model.search.*;
 import org.endeavourhealth.imapi.model.tripletree.TTIriRef;
 import org.endeavourhealth.imapi.vocabulary.IM;
-import org.endeavourhealth.imapi.vocabulary.RDFS;
 import org.endeavourhealth.imapi.vocabulary.RDF;
+import org.endeavourhealth.imapi.vocabulary.RDFS;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+
+import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.http.HttpClient;
@@ -31,69 +39,21 @@ import java.net.http.HttpResponse;
 import java.util.*;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
-import java.util.zip.DataFormatException;
+
 
 /**
  * Class to create and runan open search text query
  */
 public class OSQuery {
     private static final Logger LOG = LoggerFactory.getLogger(OSQuery.class);
-    private final Set<String> resultCache = new HashSet<>();
-    private final String termCodeTerm = "termCode.term";
-    private final String matchTerm = "matchTerm";
-    private final String scheme = "scheme";
-    private final String weighting = "weighting";
-    private final String status = "status";
-    private final String comment = "comment";
+    private static final String TERM_CODE_TERM = "termCode.term";
+    private static final String MATCH_TERM = "matchTerm";
+    private static final String SCHEME = "scheme";
+    private static final String WEIGHTING = "weighting";
+    private static final String STATUS = "status";
+    private static final String COMMENT = "comment";
+    private boolean hasScriptScore;
 
-    public Set<String> getResultCache() {
-        return resultCache;
-    }
-
-
-    public OSQuery addResult(String item) {
-        resultCache.add(item);
-        return this;
-    }
-
-
-    private List<SearchResultSummary> codeIriQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
-        SearchSourceBuilder bld= new SearchSourceBuilder();
-        QueryBuilder qry = buildCodeIriQuery(request);
-        bld.query(qry);
-        return wrapandRun(bld, request);
-    }
-
-
-    private List<SearchResultSummary> autoCompleteQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
-        SearchSourceBuilder bld= new SearchSourceBuilder();
-        QueryBuilder qry = buildAutoCompleteQuery(request);
-        bld.query(qry);
-        bld.sort("length");
-        return wrapandRun(bld, request);
-    }
-
-    private List<SearchResultSummary> boolQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
-        SearchSourceBuilder bld= new SearchSourceBuilder();
-        QueryBuilder qry = buildBoolQuery(request);
-        bld.query(qry);
-        return wrapandRun(bld, request);
-    }
-
-    private List<SearchResultSummary> iriTermQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
-        SearchSourceBuilder bld= new SearchSourceBuilder();
-        QueryBuilder qry = buildIriTermQuery(request);
-        bld.query(qry);
-        bld.sort("length");
-        return wrapandRun(bld, request);
-    }
-
-    private List<SearchResultSummary> multiWordQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
-        SearchSourceBuilder bld= new SearchSourceBuilder();
-        QueryBuilder qry = buildMultiWordQuery(request);
-        bld.query(qry);
-        return wrapandRun(bld, request);
-    }
 
     /**
      * A rapid response page oriented query that bundles together code/iri key prefix term and the multi-word sequentially
@@ -103,53 +63,146 @@ public class OSQuery {
      *
      * @param request Search request object
      * @return search request object
-     * @throws DataFormatException if problem with data format of query
+     * @throws QueryException if problem with data format of query
      */
-    public List<SearchResultSummary>  multiPhaseQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
 
-        String term = request.getTermFilter();
+    public SearchResponse  multiPhaseQuery(SearchRequest request) throws  InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
+
+        request.addTiming("Entry point for \""+request.getTermFilter()+"\"");
+        SearchResponse results;
+            results = defaultQuery(request);
+        if (null != results) {
+            return results;
+        }
+        if (request.getTermFilter().contains(" ")){
+          results= wrapandRun(buildNGramQuery(request),request);
+          if (null != results)
+              return results;
+        }
+
+        String corrected= spellingCorrection(request);
+        if (corrected!=null) {
+                    request.setTermFilter(corrected);
+                    results = defaultQuery(request);
+                    if (null != results)
+                    return results;
+        }
+
+        return results;
+    }
+
+    private SearchResponse defaultQuery(SearchRequest request) throws OpenSearchException, URISyntaxException, ExecutionException, InterruptedException, JsonProcessingException {
         int page = request.getPage();
         int size = request.getSize();
-
         request.setFrom(size * (page - 1));
-
-        List<SearchResultSummary> results;
-
-        request.setPage(1);
-        if (term != null && term.length() < 3)
-            return codeIriQuery(request);
-
+        String term = request.getTermFilter();
+        if (null == term) {
+            return boolQuery(request);
+        }
+        SearchResponse results;
         if (page == 1 && term != null && (!term.contains(" "))) {
             if (term.contains(":")) {
                 String namespace = EntityCache.getDefaultPrefixes().getNamespace(term.substring(0, term.indexOf(":")));
                 if (namespace != null)
                     request.setTermFilter(namespace + term.split(":")[1]);
             }
-            results = iriTermQuery(request);
-            if (!results.isEmpty())
-                return results;
         }
 
-        if (null == term) {
-            return boolQuery(request);
-        }
+
+        request.addTiming("start building auto complete query");
 
         results = autoCompleteQuery(request);
-        if (!results.isEmpty()) {
+        request.addTiming("end auto complete query - returning results");
+        if (null != results) {
             return results;
         }
         return multiWordQuery(request);
     }
 
-    private String getMatchTerm(String term){
-        term=term.replaceAll(" ","");
-        if (term.length()<25)
-            return term;
-        else
-            return term.substring(0,24);
+    private SearchResponse codeIriQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
+
+        QueryBuilder qry = buildCodeIriQuery(request);
+        return wrapandRun(qry, request);
     }
 
-    private QueryBuilder buildCodeIriQuery(SearchRequest request) {
+
+    private SearchResponse autoCompleteQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
+        QueryBuilder qry = buildAutoCompleteQuery(request);
+        hasScriptScore= true;
+        return wrapandRun(qry, request);
+    }
+
+    private Map<String,Object> getScript(SearchRequest request) throws JsonProcessingException {
+        if (request.getOrderBy() == null)
+            return null;
+        Map<String, Object> params = null;
+        for (OrderBy orderBy : request.getOrderBy()) {
+            if (orderBy.getAnd() != null || orderBy.getIriValue() != null || orderBy.isStartsWithTerm()) {
+                if (params == null) {
+                    params = new HashMap<>();
+                    params.put("term", request.getTermFilter().toLowerCase());
+                    Map<String,Object> ordersMap= new HashMap<>();
+                    params.put("orders",ordersMap);
+                    ordersMap.put("orderBy",new ArrayList<>());
+                }
+                Map<String,Object> ordersMap= (Map) params.get("orders");
+                Map<String,Object> orderByMap= new HashMap<>();
+                ((List) ordersMap.get("orderBy")).add(orderByMap);
+                orderByMap.put("field", orderBy.getField());
+                if (orderBy.getIriValue() != null) {
+                    orderByMap.put("iriValue", new ArrayList<>());
+                    for (TTIriRef iriValue : orderBy.getIriValue()) {
+                        ((List) orderByMap.get("iriValue")).add(iriValue.getIri());
+                    }
+                }
+                if (orderBy.getTextValue() != null) {
+                    orderByMap.put("textValue", new ArrayList<>());
+                    for (String textValue : orderBy.getTextValue()) {
+                        ((List) orderByMap.get("textValue")).add(textValue);
+                    }
+                }
+                if (orderBy.isStartsWithTerm()) {
+                    orderByMap.put("startsWithTerm", true);
+                }
+            }
+        }
+        return params;
+
+
+    }
+
+
+    private void setSorts(SearchRequest request,SearchSourceBuilder bld) {
+        if (request.getOrderBy()!=null) {
+            for (OrderBy orderBy: request.getOrderBy()){
+                if (orderBy.getDirection()!=null){
+                    bld.sort(orderBy.getField(), orderBy.getDirection()==Order.descending ? SortOrder.DESC : SortOrder.ASC);
+                }
+            }
+        }
+    }
+
+    private SearchResponse boolQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
+        QueryBuilder qry = buildBoolQuery(request);
+        return wrapandRun(qry, request);
+    }
+
+
+    private SearchResponse multiWordQuery(SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
+        QueryBuilder qry = buildMultiWordQuery(request);
+        return wrapandRun(qry, request);
+    }
+
+
+    private String getMatchTerm(String term){
+        term=term.split(" \\(")[0];
+        if (term.length()<30)
+            return term;
+        else
+            return term.substring(0,30);
+    }
+
+    private BoolQueryBuilder buildCodeIriQuery(SearchRequest request) {
         BoolQueryBuilder boolBuilder = new BoolQueryBuilder();
         String term = request.getTermFilter();
         if (term.contains(":")) {
@@ -159,22 +212,31 @@ public class OSQuery {
         }
 
         TermQueryBuilder tqb = new TermQueryBuilder("code", request.getTermFilter());
-        tqb.boost(2F);
         boolBuilder.should(tqb);
         TermQueryBuilder tqiri = new TermQueryBuilder("iri", request.getTermFilter());
-        tqiri.boost(2F);
         boolBuilder.should(tqiri);
         TermQueryBuilder tciri = new TermQueryBuilder("termCode.code", request.getTermFilter());
-        tqiri.boost(1F);
         boolBuilder.should(tciri);
-        tqb = new TermQueryBuilder("key", request.getTermFilter().toLowerCase());
-        boolBuilder.should(tqb).minimumShouldMatch(1);
-        addFilters(boolBuilder, request);
+
         return boolBuilder;
     }
 
 
     private void addFilters(BoolQueryBuilder qry, SearchRequest request) {
+        if (request.getFilter()!=null){
+            for (Filter filter:request.getFilter()){
+                String field= filter.getField();
+                if (filter.getIriValue()!=null){
+                    TermsQueryBuilder tqr= new TermsQueryBuilder(field+".@id",
+                      filter.getIriValue().stream().map(TTIriRef::getIri).collect(Collectors.toList()));
+                    qry.filter(tqr);
+                }
+                if (filter.getTextValue()!=null){
+                    TermsQueryBuilder tqr= new TermsQueryBuilder(field,filter.getTextValue());
+                    qry.filter(tqr);
+                }
+            }
+        }
         if (!request.getSchemeFilter().isEmpty()) {
             List<String> schemes = new ArrayList<>(request.getSchemeFilter());
             TermsQueryBuilder tqr = new TermsQueryBuilder("scheme.@id", schemes);
@@ -195,15 +257,27 @@ public class OSQuery {
             TermsQueryBuilder tqr = new TermsQueryBuilder("isA.@id", isas);
             qry.filter(tqr);
         }
+        if (!request.getMemberOf().isEmpty()) {
+            List<String> memberOfs = new ArrayList<>(request.getMemberOf());
+            TermsQueryBuilder tqr = new TermsQueryBuilder("memberOf.@id", memberOfs);
+            qry.filter(tqr);
+        }
     }
+
 
     private QueryBuilder buildBoolQuery(SearchRequest request) {
         BoolQueryBuilder boolQuery = new BoolQueryBuilder();
-        if(null == request.getIsA() || request.getIsA().isEmpty()) {
-            return boolQuery;
+
+        if (!request.getIsA().isEmpty()) {
+            List<String> isas = new ArrayList<>(request.getIsA());
+            boolQuery.must(new TermsQueryBuilder("isA.@id", isas));
         }
-        List<String> isas = new ArrayList<>(request.getIsA());
-        boolQuery.must(new TermsQueryBuilder("isA.@id", isas));
+
+        if (!request.getMemberOf().isEmpty()) {
+            List<String> memberOfs = new ArrayList<>(request.getMemberOf());
+            boolQuery.must(new TermsQueryBuilder("memberOf.@id", memberOfs));
+        }
+
         return boolQuery;
     }
 
@@ -211,35 +285,60 @@ public class OSQuery {
 
 
     private QueryBuilder buildAutoCompleteQuery(SearchRequest request) {
+        if (request.getOrderBy()==null){
+            addDefaultSorts(request);
+        }
         String requestTerm=getMatchTerm(request.getTermFilter());
+        BoolQueryBuilder boolQuery ;
+        if (request.getPage()==1&&!requestTerm.contains(" ")){
+            boolQuery= buildCodeIriQuery(request);
+            PrefixQueryBuilder pqb = new PrefixQueryBuilder("key", request.getTermFilter());
+            boolQuery.should(pqb);
+        }
+        else
+            boolQuery= new BoolQueryBuilder();
 
-        BoolQueryBuilder boolQuery = new BoolQueryBuilder();
-        MatchPhraseQueryBuilder mpq = new MatchPhraseQueryBuilder(matchTerm, requestTerm).boost(1.5F);
-        boolQuery.should(mpq);
-        MatchPhrasePrefixQueryBuilder mpp = new MatchPhrasePrefixQueryBuilder(matchTerm, requestTerm).boost(1.5F);
-        boolQuery.should(mpp).minimumShouldMatch(1);
+        String prefix=requestTerm.replaceAll("[ '()\\-_./]","").toLowerCase();
+        PrefixQueryBuilder pqb = new PrefixQueryBuilder(MATCH_TERM, prefix);
+        boolQuery.should(pqb);
+        MatchPhrasePrefixQueryBuilder mpt = new MatchPhrasePrefixQueryBuilder(TERM_CODE_TERM, requestTerm)
+          .analyzer("standard")
+          .boost(1.5F)
+          .slop(1);
+        boolQuery.should(mpt);
+        boolQuery.minimumShouldMatch(1);
         addFilters(boolQuery, request);
+
         return boolQuery;
 
     }
 
-    private QueryBuilder buildIriTermQuery(SearchRequest request) {
-        BoolQueryBuilder boolQuery = new BoolQueryBuilder();
-        TermQueryBuilder tqb = new TermQueryBuilder("code", request.getTermFilter());
-        tqb.boost(4F);
-        boolQuery.should(tqb);
-        TermQueryBuilder tqiri = new TermQueryBuilder("iri", request.getTermFilter());
-        tqiri.boost(4F);
-        boolQuery.should(tqiri);
-        PrefixQueryBuilder pqb = new PrefixQueryBuilder("key", request.getTermFilter());
-        pqb.boost(2F);
-        boolQuery.should(pqb);
-        MatchPhraseQueryBuilder mpq = new MatchPhraseQueryBuilder(termCodeTerm, request.getTermFilter()).boost(1.5F);
-        boolQuery.should(mpq);
-        MatchPhraseQueryBuilder mpc = new MatchPhraseQueryBuilder("termCode.code", request.getTermFilter()).boost(2.5F);
-        boolQuery.should(mpc);
-        MatchPhrasePrefixQueryBuilder mfs = new MatchPhrasePrefixQueryBuilder(matchTerm, request.getTermFilter()).boost(0.5F);
-        boolQuery.should(mfs).minimumShouldMatch(1);
+    private void addDefaultSorts(SearchRequest request){
+        request.orderBy(o->o.setField("name").setStartsWithTerm(true));
+        request.orderBy(o->o.setField("preferredName").setStartsWithTerm(true));
+        request.orderBy(o-> o
+          .setField("subsumptionCount")
+          .setDirection(Order.descending));
+        request.orderBy(o->o
+          .setField("length")
+          .setDirection(Order.ascending));
+        request.orderBy(o->o
+          .setField("weighting"));
+    }
+
+
+
+    private QueryBuilder buildNGramQuery(SearchRequest request){
+        if (request.getOrderBy()==null){
+            addDefaultSorts(request);
+        }
+        String requestTerm=getMatchTerm(request.getTermFilter());
+        BoolQueryBuilder  boolQuery= new BoolQueryBuilder();
+        MatchQueryBuilder mat= new MatchQueryBuilder(TERM_CODE_TERM,requestTerm);
+        mat.analyzer("standard");
+        mat.operator(Operator.AND);
+        mat.fuzziness(Fuzziness.TWO);
+        boolQuery.must(mat);
         addFilters(boolQuery, request);
         return boolQuery;
 
@@ -247,15 +346,17 @@ public class OSQuery {
 
     private QueryBuilder buildMultiWordQuery(SearchRequest request) {
         BoolQueryBuilder qry = new BoolQueryBuilder();
-        MatchPhrasePrefixQueryBuilder pqry = new MatchPhrasePrefixQueryBuilder(termCodeTerm, request.getTermFilter());
+        MatchPhrasePrefixQueryBuilder pqry = new MatchPhrasePrefixQueryBuilder(TERM_CODE_TERM, request.getTermFilter());
+        pqry.analyzer("standard");
         qry.should(pqry);
         BoolQueryBuilder wqry = new BoolQueryBuilder();
         qry.should(wqry);
         int wordPos = 0;
         for (String term : request.getTermFilter().split(" ")) {
             wordPos++;
-            MatchPhrasePrefixQueryBuilder mfs = new MatchPhrasePrefixQueryBuilder(termCodeTerm, term);
+            MatchPhrasePrefixQueryBuilder mfs = new MatchPhrasePrefixQueryBuilder(TERM_CODE_TERM, term);
             mfs.boost(wordPos == 1 ? 4 : 1);
+            mfs.analyzer("standard");
             wqry.must(mfs);
         }
         qry.minimumShouldMatch(1);
@@ -264,7 +365,23 @@ public class OSQuery {
 
     }
 
-    private List<SearchResultSummary> wrapandRun(SearchSourceBuilder bld,SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
+    private SearchResponse wrapandRun(QueryBuilder query,SearchRequest request) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException {
+        SearchSourceBuilder bld= new SearchSourceBuilder();
+        if (hasScriptScore) {
+            Map<String,Object> params= getScript(request);
+            if (params != null) {
+                Script script = new Script(ScriptType.STORED,null,"orderBy",params);
+                //Script script= new Script(ScriptType.STORED,null,scriptScore,new HashMap<>());
+                ScriptScoreQueryBuilder sqr = QueryBuilders.scriptScoreQuery(query, script);
+                bld.query(sqr);
+                bld.sort("_score");
+            }
+            else
+                bld.query(query);
+        }
+        else
+            bld.query(query);
+        setSorts(request,bld);
         if (request.getIndex() == null)
             request.setIndex("concept");
 
@@ -280,12 +397,10 @@ public class OSQuery {
 
         String termCode = "termCode";
 
-        Set<String> fields = Set.of("iri", "name", "code", termCode, "entityType", status, scheme, weighting,"preferredName");
+        List<String> defaultFields = new ArrayList<>(Arrays.asList("iri", "name", "code", termCode, "entityType", STATUS, SCHEME, WEIGHTING,"preferredName"));
+        Set<String> fields = new HashSet<>(defaultFields);
         if (!request.getSelect().isEmpty()) {
-            for (String select : request.getSelect()) {
-                if (!fields.contains(select))
-                    fields.add(select);
-            }
+            fields.addAll(request.getSelect());
         }
         String[] sources= fields.toArray(String[]::new);
         bld.fetchSource(sources, null);
@@ -298,17 +413,61 @@ public class OSQuery {
         }
     }
 
-    public List<SearchResultSummary> runQuery(SearchRequest request, SearchSourceBuilder bld) throws OpenSearchException, URISyntaxException, ExecutionException, InterruptedException, JsonProcessingException {
-       String queryJson = bld.toString();
-       /*
-       String queryJson= "{\n" +
-          "  \"query\" : {\n" +
-          "    \"match_all\": {}\n" +
-          "  }\n" +
-          "}";
 
-        */
+    public SearchResponse runQuery(SearchRequest request, SearchSourceBuilder bld) throws OpenSearchException, URISyntaxException, ExecutionException, InterruptedException, JsonProcessingException {
+        request.addTiming("About to run query");
 
+        String queryJson = bld.toString();
+
+        HttpResponse<String> response= getQueryResponse(request,queryJson);
+
+        try (CachedObjectMapper om = new CachedObjectMapper()) {
+            JsonNode root = om.readTree(response.body());
+            request.addTiming("Query run and response received. Ready to produce search results");
+            SearchResponse searchResults = new SearchResponse();
+            return standardResponse(request, root, om, searchResults);
+        }
+
+    }
+
+    private HttpResponse<String> getQueryResponse(SearchRequest request,String queryJson) throws OpenSearchException, URISyntaxException, ExecutionException, InterruptedException {
+        String url = System.getenv("OPENSEARCH_URL");
+        if (url == null)
+            throw new OpenSearchException("Environmental variable OPENSEARCH_URL is not set");
+
+
+        String index = request.getIndex();
+        if (index == null)
+            index = System.getenv("OPENSEARCH_INDEX");
+
+        if (System.getenv("OPENSEARCH_AUTH") == null)
+            throw new OpenSearchException("Environmental variable OPENSEARCH_AUTH token is not set");
+        HttpRequest httpRequest = HttpRequest.newBuilder()
+          .uri(new URI(url + index + "/_search"))
+
+          .header("Authorization", "Basic " + System.getenv("OPENSEARCH_AUTH"))
+          .header("Content-Type", "application/json")
+          .POST(HttpRequest.BodyPublishers.ofString(queryJson))
+          .build();
+        request.addTiming("Query sent...");
+
+        HttpClient client = HttpClient.newHttpClient();
+        HttpResponse<String> response = client
+          .sendAsync(httpRequest, HttpResponse.BodyHandlers.ofString())
+          .thenApply(res -> res)
+          .get();
+
+        if (299 < response.statusCode()) {
+            LOG.debug("Open search request failed with code: {}", response.statusCode());
+            throw new OpenSearchException("Search request failed. Error =. "+response.body());
+        }
+        return response;
+
+
+    }
+
+    public int runQueryCount(SearchRequest request, SearchSourceBuilder bld) throws OpenSearchException, URISyntaxException, ExecutionException, InterruptedException, JsonProcessingException {
+        String queryJson = bld.toString();
         String url = System.getenv("OPENSEARCH_URL");
         if (url == null)
             throw new OpenSearchException("Environmental variable OPENSEARCH_URL is not set");
@@ -320,17 +479,18 @@ public class OSQuery {
         if (System.getenv("OPENSEARCH_AUTH") == null)
             throw new OpenSearchException("Environmental variable OPENSEARCH_AUTH token is not set");
         HttpRequest httpRequest = HttpRequest.newBuilder()
-                .uri(new URI(url + index + "/_search"))
-                .header("Authorization", "Basic " + System.getenv("OPENSEARCH_AUTH"))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(queryJson))
-                .build();
+            .uri(new URI(url + index + "/_count"))
+
+            .header("Authorization", "Basic " + System.getenv("OPENSEARCH_AUTH"))
+            .header("Content-Type", "application/json")
+            .POST(HttpRequest.BodyPublishers.ofString(queryJson))
+            .build();
 
         HttpClient client = HttpClient.newHttpClient();
         HttpResponse<String> response = client
-                .sendAsync(httpRequest, HttpResponse.BodyHandlers.ofString())
-                .thenApply(res -> res)
-                .get();
+            .sendAsync(httpRequest, HttpResponse.BodyHandlers.ofString())
+            .thenApply(res -> res)
+            .get();
 
         if (299 < response.statusCode()) {
             LOG.debug("Open search request failed with code: {}", response.statusCode());
@@ -339,17 +499,16 @@ public class OSQuery {
 
         try (CachedObjectMapper om = new CachedObjectMapper()) {
             JsonNode root = om.readTree(response.body());
-            List<SearchResultSummary> searchResults = new ArrayList<>();
-            return standardResponse(request, root, om, searchResults);
+            return root.get("count").asInt();
         }
     }
 
-    private List<SearchResultSummary> standardResponse(SearchRequest request, JsonNode root, CachedObjectMapper resultMapper, List<SearchResultSummary> searchResults) throws JsonProcessingException {
+    private SearchResponse standardResponse(SearchRequest request, JsonNode root, CachedObjectMapper resultMapper, SearchResponse searchResults) throws JsonProcessingException {
         int resultNumber = 0;
         for (JsonNode hit : root.get("hits").get("hits")) {
             resultNumber++;
             SearchResultSummary source = resultMapper.treeToValue(hit.get("_source"), SearchResultSummary.class);
-            searchResults.add(source);
+            searchResults.addEntity(source);
             source.setMatch(source.getName());
             if (source.getPreferredName()!=null) {
                 source.setName(source.getPreferredName());
@@ -360,8 +519,14 @@ public class OSQuery {
             }
             source.setTermCode(null);
         }
-        if (!searchResults.isEmpty() && null != request.getTermFilter())
-            sort(searchResults, request.getTermFilter());
+        Integer totalCount = resultMapper.treeToValue(root.get("hits").get("total").get("value"),Integer.class);
+        if (null != totalCount) searchResults.setCount(totalCount);
+        if (request.getPage() != 0) searchResults.setPage(request.getPage());
+        //Sort now donw in query
+       // if (!searchResults.isEmpty() && null != request.getTermFilter())
+         //   sort(searchResults, request.getTermFilter());
+        request.addTiming("Results List built");
+        if (null != request.getTermFilter()) searchResults.setTerm(request.getTermFilter());
         return searchResults;
     }
 
@@ -375,8 +540,8 @@ public class OSQuery {
         searchTerm = searchTerm.toLowerCase();
         if (searchResult.getTermCode() != null) {
             for (SearchTermCode tc : searchResult.getTermCode()) {
-                TTIriRef status = tc.getStatus();
-                if ((status != null) && (!(status.equals(IM.INACTIVE))) &&
+                TTIriRef termCodeStatus = tc.getStatus();
+                if ((termCodeStatus != null) && (!(termCodeStatus.getIri().equals(IM.INACTIVE))) &&
                     (tc.getTerm() != null && tc.getTerm().toLowerCase().startsWith(searchTerm))) {
                     searchResult.setMatch(tc.getTerm());
                     break;
@@ -385,13 +550,7 @@ public class OSQuery {
         }
     }
 
-    private void sort(List<SearchResultSummary> initialList, String term) {
-        term = term.toLowerCase(Locale.ROOT);
-        String finalTerm = term;
-        initialList.sort(Comparator.comparing((SearchResultSummary sr) -> !sr.getMatch().toLowerCase(Locale.ROOT).startsWith(finalTerm))
-                .thenComparing(sr -> sr.getMatch().length()));
 
-    }
 
     /**
      * An open search query using IMQ- Returns null if query cannot be done via open search.
@@ -399,119 +558,131 @@ public class OSQuery {
      *
      * @param queryRequest Query request object containing any textSearch term, paging and a query.
      * @return ObjectNode as determined by select statement
-     * @throws DataFormatException if content of query definition is invalid
+     * @throws QueryException if content of query definition is invalid
      */
 
-    public ObjectNode openSearchQuery(QueryRequest queryRequest) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException, DataFormatException {
+    public SearchResponse openSearchQuery(QueryRequest queryRequest) throws InterruptedException, OpenSearchException, URISyntaxException, ExecutionException, JsonProcessingException, QueryException {
         if (queryRequest.getTextSearch() == null)
             return null;
+
         Query query = queryRequest.getQuery();
 
-        if (query.getSelect() != null && !validateSelects(query)) {
-            return null;
+        if (query != null) {
+            if (query.getReturn() != null && !returnsCompatibleWithOpenSearch(query.getReturn())) {
+                return null;
+            }
+
+            if (query.getMatch() != null && !matchesCompatibleWithOpenSearch(query.getMatch())) {
+                return null;
+            }
         }
 
-
-
-        if (query.getFrom() != null && !validateFrom(query.getFrom())) {
-            return null;
-        }
-
-        SearchRequest searchRequest = convertIMToOS(queryRequest);
+        SearchRequest searchRequest = queryRequestToSearchRequest(queryRequest);
         if (searchRequest==null)
             return null;
-        List<SearchResultSummary> results = multiPhaseQuery(searchRequest);
-        if (results.isEmpty())
+        SearchResponse results = multiPhaseQuery(searchRequest);
+        if (results.getEntities().isEmpty())
             return null;
         else
-            return convertOSResult(results, query);
+            return results;
 
     }
 
-    private static boolean validateSelects(Query query) {
-        for (Select select : query.getSelect()) {
-            if (select.getIri() != null && !propIsSupported(select.getIri()))
-                return false;
-            if (select.getSelect() != null)
-                return false;
-        }
-        return true;
-    }
-
-    private boolean validateFrom(From from) {
-        if (from.getWhere()!=null)
-            for (Where where : from.getWhere()){
-                if (!validateWhere(where))
+    private static boolean returnsCompatibleWithOpenSearch(List<Return> returns) {
+        if (returns != null) {
+            for (Return r : returns) {
+                if (!returnCompatibleWithOpenSearch(r))
                     return false;
             }
-        if (from.getFrom()!=null)
-            for (From subFrom:from.getFrom())
-                if (!validateFrom(subFrom))
-                    return false;
+        }
         return true;
     }
 
-    private boolean validateWhere(Where where){
-        if (where.getWhere()!=null && !propIsSupported(where.getIri())){
+    private static boolean returnCompatibleWithOpenSearch(Return r) {
+        for (ReturnProperty p : r.getProperty()) {
+            if (p != null) {
+                if (p.getIri() != null && !propertyAvailableInOpenSearch(p.getIri()))
+                    return false;
+
+                if (p.getReturn() != null && !returnCompatibleWithOpenSearch(p.getReturn()))
+                    return false;
+            }
+        }
+        return true;
+    }
+
+    private boolean matchesCompatibleWithOpenSearch(List<Match> matches) {
+        for (Match match:matches) {
+            if (!matchCompatibleWithOpenSearch(match)){
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private boolean matchCompatibleWithOpenSearch(Match match){
+        if (match.getProperty() != null){
+            for (Property property : match.getProperty()) {
+                if (!propertyCompatibleWithOpenSearch(property))
+                    return false;
+            }
+        }
+        if (match.getMatch() != null){
+            return matchesCompatibleWithOpenSearch(match.getMatch());
+        }
+        return true;
+    }
+
+    private boolean propertyCompatibleWithOpenSearch(Property property){
+        if (!propertyAvailableInOpenSearch(property.getIri())){
             return false;
         }
-        if (where.getWhere()!=null){
-            for (Where subWhere:where.getWhere())
-                if (!validateWhere(subWhere))
-                    return false;
+        if (property.getMatch()!=null){
+           return matchCompatibleWithOpenSearch(property.getMatch());
         }
         return true;
-
-
     }
-    private ObjectNode convertOSResult(List<SearchResultSummary> searchResults, Query query) {
+
+    public ObjectNode convertOSResult(SearchResponse searchResults, Query query) {
         try (CachedObjectMapper om = new CachedObjectMapper()) {
             ObjectNode result = om.createObjectNode();
             ArrayNode resultNodes = om.createArrayNode();
             result.set("entities", resultNodes);
-            for (SearchResultSummary searchResult : searchResults) {
+            for (SearchResultSummary searchResult : searchResults.getEntities()) {
                 ObjectNode resultNode = om.createObjectNode();
                 resultNodes.add(resultNode);
                 resultNode.put("@id", searchResult.getIri());
-                if (query.getSelect()==null)
-                    query.select(s->s.setIri(RDFS.LABEL.getIri()));
-                for (Select select : query.getSelect()) {
-                    convertOSResultAddNode(om, searchResult, resultNode, select);
+
+                if (query != null) {
+                    if (query.getReturn() == null)
+                        query.return_(s -> s.property(p -> p.setIri(RDFS.LABEL)));
+                    for (Return select : query.getReturn()) {
+                        convertOSResultAddNode(om, searchResult, resultNode, select);
+                    }
                 }
             }
             return result;
         }
     }
 
-    private void convertOSResultAddNode(CachedObjectMapper om, SearchResultSummary searchResult, ObjectNode resultNode, Select select) {
-        TTAlias prop = select;
-        if (prop.getIri() != null) {
-            String field = prop.getIri();
-            switch (prop.getIri()) {
-                case (RDFS.NAMESPACE + "label"):
-                    resultNode.put(field, searchResult.getName());
-                    break;
-                case (RDFS.NAMESPACE + comment):
-                    if (searchResult.getDescription() != null)
-                        resultNode.put(field, searchResult.getDescription());
-                    break;
-                case (IM.NAMESPACE + "code"):
-                    resultNode.put(field, searchResult.getCode());
-                    break;
-                case (IM.NAMESPACE + status):
-                    resultNode.set(field, fromIri(searchResult.getStatus(), om));
-                    break;
-                case (IM.NAMESPACE + scheme):
-                    resultNode.set(field, fromIri(searchResult.getScheme(), om));
-                    break;
-                case (RDF.NAMESPACE + "type"):
-                    resultNode.set(field, arrayFromIri(searchResult.getEntityType(), om));
-                    break;
-                case (IM.NAMESPACE + weighting):
-                    resultNode.put(field, searchResult.getWeighting());
-                    break;
-                default:
-
+    private void convertOSResultAddNode(CachedObjectMapper om, SearchResultSummary searchResult, ObjectNode resultNode, Return select) {
+        if (select.getProperty()!=null) {
+            for (ReturnProperty prop : select.getProperty()) {
+                if (prop.getIri() != null) {
+                    String field = prop.getIri();
+                    switch (field) {
+                        case IM.CODE -> resultNode.put(field, searchResult.getCode());
+                        case IM.HAS_STATUS -> resultNode.set(field, fromIri(searchResult.getStatus(), om));
+                        case IM.HAS_SCHEME -> resultNode.set(field, fromIri(searchResult.getScheme(), om));
+                        case IM.WEIGHTING -> resultNode.put(field, searchResult.getWeighting());
+                        case RDFS.LABEL -> resultNode.put(field, searchResult.getName());
+                        case RDFS.COMMENT -> {
+                            if (searchResult.getDescription() != null)
+                                resultNode.put(field, searchResult.getDescription());
+                        }
+                        case RDF.TYPE -> resultNode.set(field, arrayFromIri(searchResult.getEntityType(), om));
+                    }
+                }
             }
         }
     }
@@ -538,7 +709,7 @@ public class OSQuery {
     }
 
 
-    private SearchRequest convertIMToOS(QueryRequest imRequest) throws DataFormatException {
+    private SearchRequest queryRequestToSearchRequest(QueryRequest imRequest) throws QueryException {
 
         SearchRequest request = new SearchRequest();
         if (imRequest.getPage() != null) {
@@ -546,100 +717,128 @@ public class OSQuery {
             request.setSize(imRequest.getPage().getPageSize());
         }
         request.setTermFilter(imRequest.getTextSearch());
+
         Query query = imRequest.getQuery();
-        if (!validateFromList(request, query,imRequest))
-            return null;
+        if (query != null) {
+            if (!processMatches(request, query, imRequest))
+                return null;
+            if (query.isActiveOnly()) {
+                if (request.getStatusFilter().isEmpty()) request.setStatusFilter(List.of(IM.ACTIVE));
+            }
+            processSelects(request, query);
+        }
+
         request.addSelect("iri");
         request.addSelect("name");
-        if (query.isActiveOnly())
-            request.setStatusFilter(List.of(IM.ACTIVE.getIri()));
-        processSelects(request, query);
 
         return request;
     }
 
     private void processSelects(SearchRequest request, Query query) {
-        if (query.getSelect() != null) {
-            for (Select select : query.getSelect()) {
-                TTAlias prop = select;
-                if (prop.getIri() != null) {
-                    switch (prop.getIri()) {
-                        case (RDFS.NAMESPACE + comment):
-                            request.addSelect("description");
-
-                            break;
-                        case (IM.NAMESPACE + "code"):
-                            request.addSelect("code");
-                            break;
-                        case (IM.NAMESPACE + status):
-                            request.addSelect(status);
-                            break;
-                        case (IM.NAMESPACE + scheme):
-                            request.addSelect(scheme);
-                            break;
-                        case (RDF.NAMESPACE + "type"):
-                            request.addSelect("entityType");
-                            break;
-                        case (IM.NAMESPACE + weighting):
-                            request.addSelect(weighting);
-                            break;
-                        default:
+        if (query.getReturn() != null) {
+            query.getReturn().stream()
+                .map(Return::getProperty)
+                .flatMap(Collection::stream)
+                .forEach(prop -> {
+                    if (prop.getIri() != null) {
+                        if (prop.getIri().equals(RDFS.COMMENT)) request.addSelect("description");
+                        else if (prop.getIri().equals(IM.CODE)) request.addSelect("code");
+                        else if (prop.getIri().equals(IM.HAS_STATUS)) request.addSelect(STATUS);
+                        else if (prop.getIri().equals(IM.HAS_SCHEME)) request.addSelect(SCHEME);
+                        else if (prop.getIri().equals(RDF.TYPE)) request.addSelect("entityType");
+                        else if (prop.getIri().equals(IM.WEIGHTING)) request.addSelect(WEIGHTING);
                     }
-                }
-            }
+                });
         }
     }
 
-    private static boolean validateFromList(SearchRequest request, Query query,QueryRequest imRequest) throws DataFormatException {
-        From from = query.getFrom();
-        return addFromTypes(request, from,imRequest);
-    }
-
-    private static boolean addFromTypes(SearchRequest request, From from,QueryRequest imRequest) throws DataFormatException {
-        if (from.getType()!= null){
-                request.addType(from.getType());
-                if (from.getFrom()!=null)
-                    return false;
-                if (from.getWhere()!=null)
-                    return false;
-                return true;
-        }
-        else if (from.isDescendantsOrSelfOf()) {
-                return processSubTypes(request, from, imRequest);
-        }
-        else if (from.getIri()!=null)
-                throw new DataFormatException("Text searches on sets or single instances not supported. Are you looking for types (from.sourceType= type, or subtypes from.isIncludeSubtypes(true");
-
-        else if (from.getFrom() != null) {
-            if (from.getBoolFrom()!=Bool.or){
-                return false;
-            }
-            for (From subFrom : from.getFrom()) {
-                if (!addFromTypes(request, subFrom, imRequest))
-                    return false;
-            }
+    private static boolean processMatches(SearchRequest request, Query query, QueryRequest imRequest) throws QueryException {
+        if (query.getMatch() == null)
             return true;
 
+        for (Match match: query.getMatch()) {
+            if (!processMatch(request, match, imRequest))
+                return false;
         }
-        return false;
-    }
-
-    private static boolean processSubTypes(SearchRequest request, From from, QueryRequest imRequest) throws DataFormatException {
-        List<String> isas= listFromAlias(request,from,imRequest);
-        if (isas==null)
-            return false;
-        request.setIsA(isas);
         return true;
     }
 
-    private static List<String> listFromAlias(SearchRequest request, From from, QueryRequest queryRequest) throws DataFormatException {
-        if (from.getVariable() == null) {
-            List<String> iriList = new ArrayList<>();
-            iriList.add(from.getIri());
-            return iriList;
+    private static boolean processMatch(SearchRequest request, Match match, QueryRequest imRequest) throws QueryException {
+        if (match.getTypeOf() != null) {
+            List<String> iris = listFromAlias(match.getTypeOf(),imRequest);
+            if (iris == null || iris.isEmpty())
+                return false;
+
+            request.getTypeFilter().addAll(iris);
         }
 
-        String value = from.getVariable();
+        if (match.getInstanceOf() != null) {
+            List<String> iris = listFromAlias(match.getInstanceOf(),imRequest);
+            if (iris == null || iris.isEmpty())
+                return false;
+
+            request.getIsA().addAll(iris);
+        }
+
+        if (match.getProperty() != null && !processProperties(request, match))
+            return false;
+
+        if (match.getMatch() != null) {
+            if (match.getBool() != Bool.or)
+                return false;
+
+            for (Match subMatch : match.getMatch()) {
+                if (!processMatch(request, subMatch, imRequest))
+                    return false;
+            }
+        }
+
+        return true;
+    }
+
+    private static boolean processProperties(SearchRequest request, Match match) throws QueryException {
+        for(Property w : match.getProperty()) {
+            if (IM.HAS_SCHEME.equals(w.getIri())) {
+                processSchemeProperty(request, w);
+            } else if (IM.HAS_MEMBER.equals(w.getIri()) && w.isInverse()) {
+                processMemberProperty(request, w);
+            } else if (IM.HAS_STATUS.equals(w.getIri())) {
+                processStatusProperty(request, w);
+            } else {
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+    private static void processSchemeProperty(SearchRequest request, Property w) throws QueryException {
+        if (w.getIs() != null && !w.getIs().isEmpty())
+            request.setSchemeFilter(w.getIs().stream().map(Node::getIri).toList());
+        else
+            throw new QueryException("Scheme filter must be a list (is)");
+    }
+
+    private static void processMemberProperty(SearchRequest request, Property w) throws QueryException {
+        if (w.getIs() != null && !w.getIs().isEmpty())
+            request.setMemberOf(w.getIs().stream().map(Node::getIri).toList());
+        else
+            throw new QueryException("Set membership filter must be a list (is)");
+    }
+
+    private static void processStatusProperty(SearchRequest request, Property w) throws QueryException {
+        if (w.getIs() != null && !w.getIs().isEmpty())
+            request.setStatusFilter(w.getIs().stream().map(Node::getIri).toList());
+        else
+            throw new QueryException("Status filter must be a list (is)");
+    }
+
+    private static List<String> listFromAlias(Node type, QueryRequest queryRequest) throws QueryException {
+        if (type.getParameter() == null) {
+            return List.of(type.getIri());
+        }
+
+        String value = type.getParameter();
         value = value.replace("$", "");
         if (null != queryRequest.getArgument()) {
             for (Argument argument : queryRequest.getArgument()) {
@@ -652,32 +851,85 @@ public class OSQuery {
                         return iriList;
                     } else if (null != argument.getValueIriList()) {
                         return
-                                argument.getValueIriList().stream().map(TTIriRef::getIri).collect(Collectors.toList());
+                            argument.getValueIriList().stream().map(TTIriRef::getIri).toList();
                     }
                 }
             }
-            throw new DataFormatException("Query Variable " + value + " has not been assigned in the request");
+            throw new QueryException("Query Variable " + value + " has not been assigned is the request");
         } else
-            throw new DataFormatException("Query has a query variable but request has no arguments set");
+            throw new QueryException("Query has a query variable but request has no arguments set");
+    }
+
+    private String spellingCorrection(SearchRequest request) throws OpenSearchException, URISyntaxException, ExecutionException, InterruptedException, JsonProcessingException {
+        String oldTerm= request.getTermFilter();
+        String newTerm=null;
+        String suggestor = "{\n" +
+              "  \"suggest\": {\n" +
+              "    \"spell-check\": {\n" +
+              "      \"text\": \"" + oldTerm+ "\",\n" +
+              "      \"term\": {\n" +
+              "        \"field\": \"termCode.term\",\n" +
+              "        \"sort\": \"score\"\n" +
+              "      }\n" +
+              "    }\n" +
+              "  }\n" +
+              "}";
+        HttpResponse<String> response = getQueryResponse(request, suggestor);
+        try (CachedObjectMapper om = new CachedObjectMapper()) {
+                JsonNode root = om.readTree(response.body());
+                JsonNode suggestions= root.get("suggest").get("spell-check");
+                String[] words= oldTerm.split(" ");
+               for (JsonNode suggest: suggestions){
+                   if (suggest.has("options")){
+                       JsonNode options= suggest.get("options");
+                       if (options.size()>0){
+                           String original= suggest.get("text").asText();
+                           JsonNode swapNode= options.get(0).get("text");
+                           if (original.equals(oldTerm))
+                               newTerm= swapNode.asText();
+                           else {
+                               int wordPos=getWordPos(words,original);
+                               if (wordPos>-1){
+                                   words[wordPos]= swapNode.asText();
+                               }
+                           }
+                       }
+
+                   }
+               }
+               if (newTerm==null) {
+                   newTerm = String.join(" ", words);
+               }
+               if (newTerm.equals(oldTerm))
+                    return null;
+                else
+                    return newTerm;
+        }
+    }
+
+    private int getWordPos(String[] words,String wordToFind){
+        for (int i=0; i<words.length; i++){
+            if (words[i].equals(wordToFind))
+                return i;
+        }
+        return -1;
     }
 
 
-    private static boolean propIsSupported(String iri) {
+    private static boolean propertyAvailableInOpenSearch(String iri) {
         if (iri == null)
             return false;
-        switch (iri) {
-            case (RDFS.NAMESPACE + "label"):
-            case (RDFS.NAMESPACE + "comment"):
-            case (IM.NAMESPACE + "code"):
-            case (IM.NAMESPACE + "status"):
-            case (IM.NAMESPACE + "scheme"):
-            case (RDF.NAMESPACE + "type"):
-            case (IM.NAMESPACE + "weighting"):
-                return true;
-            default:
-                return false;
-        }
 
+        return List.of(
+            RDFS.LABEL,
+            RDFS.COMMENT,
+            IM.CODE,
+            IM.HAS_STATUS,
+            IM.HAS_SCHEME,
+            RDF.TYPE,
+            IM.WEIGHTING,
+            IM.HAS_MEMBER
+        ).contains(iri);
     }
 
 }
